--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-29  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-02-29  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
