--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-01  Artur Flinta  <aflinta@gmail.com>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2008-03-01  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
         * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
