--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-02  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Lucas Lommer.
+
 2008-03-01  Artur Flinta  <aflinta@gmail.com>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
