Translation updated by Reinout van Schouwen.
2008-03-03  Reinout van Schouwen <reinouts@gnome.org>

	* nl.po: Translation updated by Reinout van Schouwen.


svn path=/trunk/; revision=13866

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-03  Reinout van Schouwen <reinouts@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+	
 2008-03-03  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* en_GB.po: Updated British English translation.
