--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-03  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2008-03-03  Reinout van Schouwen <reinouts@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
