Handle the case of empty display name as if it wasn't specified.
2008-03-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_set_display_name):
	Handle the case of empty display name as if it wasn't specified.


svn path=/trunk/; revision=13876

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-04  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_set_display_name):
+	Handle the case of empty display name as if it wasn't specified.
+
 2008-02-29  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* nautilus-computer.desktop.in.in:
