--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-04  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Fixed Czech translation by Lucas Lommer,
+	thanks to Kamil Paral (bug #520256).
+
 2008-03-04  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
