--- a/po/cs.po
+++ b/po/cs.po
@@ -17,9 +17,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-02 14:53+0100\n"
-"PO-Revision-Date: 2008-03-02 14:49+0100\n"
-"Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
+"POT-Creation-Date: 2008-03-04 23:30+0100\n"
+"PO-Revision-Date: 2008-03-04 10:29+0100\n"
+"Last-Translator: Lucas Lommer <llommer@svn.gnome.org>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4899,7 +4899,7 @@ msgstr "Nelze se připojit k serveru. Musíte zadat název serveru."
 
 #: ../src/nautilus-connect-server-dialog.c:205
 msgid "Please enter a name and try again."
-msgstr "Zadejte prosím heslo a zkuste to znovu."
+msgstr "Zadejte prosím název a zkuste to znovu."
 
 #: ../src/nautilus-connect-server-dialog.c:440
 msgid "_Location (URI):"
