--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-05  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2008-03-04  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Fixed Czech translation by Lucas Lommer,
