Updated Dutch translation by Tino Meinen.
2008-03-05  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Tino Meinen.

svn path=/trunk/; revision=13880

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-05  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Updated Dutch translation by Tino Meinen.
+
 2008-03-05  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
