Fix typo in Dutch translation
svn path=/trunk/; revision=13881

--- a/po/nl.po
+++ b/po/nl.po
@@ -1880,7 +1880,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:1565
 msgid "The file \"%B\" cannot be moved to the trash."
-msgstr "Het bestand ‘%s’ kan niet in de prullenbak worden gegooid."
+msgstr "Het bestand ‘%B’ kan niet in de prullenbak worden gegooid."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1788
 msgid "Unable to eject %V"
