Fix delete all button (#518616) Patch from Rached Ben Mustapha
2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        (trash_files):
	Fix delete all button (#518616)
	Patch from Rached Ben Mustapha



svn path=/trunk/; revision=13888

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-03-06  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+        (trash_files):
+	Fix delete all button (#518616)
+	Patch from Rached Ben Mustapha
+
+2008-03-06  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.c:
         (nautilus_file_can_set_permissions):
 	Try to set permissions on remote shares. (#520572)
