Avoid showing broken icons for the media type list (#519880)
2008-03-06  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-file-management-properties.c:
	Avoid showing broken icons for the media type list (#519880)



svn path=/trunk/; revision=13889

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-06  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-file-management-properties.c:
+	Avoid showing broken icons for the media type list (#519880)
+
+2008-03-06  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
         (trash_files):
 	Fix delete all button (#518616)
