Updated polish translation
2008-03-06  Wadim Dziedzic  <wadimd@svn.gnome.org>

	* pl.po: Updated polish translation

svn path=/trunk/; revision=13893

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-06  Wadim Dziedzic  <wadimd@svn.gnome.org>
+
+	* pl.po: Updated polish translation
+
 2008-03-05  Ani Peter <peter.ani@gmail.com>
 
 	* ml.po: Updated Malayalam Translation
