--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-07  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated
+
 2008-03-06  Wadim Dziedzic  <wadimd@svn.gnome.org>
 
 	* pl.po: Updated polish translation
