--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-07  Sunil Mohan Adapa  <sunilmohan@fsf.org.in>
+
+	* te.po: Updated Telugu translation done by
+	Krishna Babu K <kkrothap@redhat.com>.
+
 2008-03-07  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated
