--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-07  Andre Klapper  <a9016009@gmx.de>
+
+	* cs.po: Updated Czech translation on behalf of 
+	Lucas Lommer.
+
 2008-03-07  Sunil Mohan Adapa  <sunilmohan@fsf.org.in>
 
 	* te.po: Updated Telugu translation done by
