Tribute to Raphael
svn path=/trunk/; revision=13898

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6320,7 +6320,7 @@ msgstr ""
 "Gustavo Maciel Dias Vieira <gustavo@sagui.org>\n"
 "Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
 "Gustavo Noronha Silva <kov@debian.org>\n"
-"Raphael Higino <phhigino@gmail.com>\n"
+"Raphael Higino <In memoriam>\n"
 "Guilherme de S. Pastore <gpastore@gnome.org>\n"
 "Leonardo Fereira Fontenelle <leo.fontenelle@gmail.com>\n"
 "Og Maciel <ogmaciel@gnome.org>"
