--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Runa Bhattacharjee <runab@fedoraproject.org>
+
+	* bn_IN.po: Corrected errors related to plural forms
+
 2008-03-07  Andre Klapper  <a9016009@gmx.de>
 
 	* cs.po: Updated Czech translation on behalf of 
