--- a/po/oc.po
+++ b/po/oc.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-08 11:20+0100\n"
-"PO-Revision-Date: 2008-03-08 11:21+0100\n"
+"POT-Creation-Date: 2008-03-08 12:48+0100\n"
+"PO-Revision-Date: 2008-03-08 12:50+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
@@ -1640,6 +1640,8 @@ msgid ""
 "Are you sure you want to permanently delete the %'d selected items from the "
 "trash?"
 msgstr ""
+"Sètz segur que volètz suprimir per totjorn lo %'d element seleccionat de la banasta ?"
+"Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats de la banasta ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1107
 #: ../libnautilus-private/nautilus-file-operations.c:1173
@@ -1667,7 +1669,8 @@ msgstr "Sètz segur que volètz suprimir per totjon \"%B\" ?"
 #, c-format
 msgid "Are you sure you want to permanently delete the %'d selected item?"
 "Are you sure you want to permanently delete the %'d selected items?"
-msgstr ""
+msgstr "Sètz segur que volètz suprimir per totjorn lo %'d element seleccionat ?"
+"Sètz segur que volètz suprimir per totjorn los %'d elements seleccionats ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1206
 msgid "Deleting files"
@@ -3285,13 +3288,15 @@ msgstr "Se seleccionatz la comanda Pegar, \"%s\" serà copiat"
 #, c-format
 msgid "The %'d selected item will be moved if you select the Paste command"
 "The %'d selected items will be moved if you select the Paste command"
-msgstr ""
+msgstr "Se seleccionatz la comanda Pegar, lo %'d element seleccionat serà desplaçat."
+"Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn desplaçats."
 
 #: ../src/file-manager/fm-directory-view.c:5554
 #, c-format
 msgid "The %'d selected item will be copied if you select the Paste command"
 "The %'d selected items will be copied if you select the Paste command"
-msgstr ""
+msgstr "Se seleccionatz la comanda Pegar, lo %'d element seleccionat serà copiat."
+"Se seleccionatz la comanda Pegar, los %'d elements seleccionats seràn copiats."
 
 #: ../src/file-manager/fm-directory-view.c:5648
 #: ../src/file-manager/fm-tree-view.c:972
