sv.po: Updated Swedish translation
svn path=/trunk/; revision=13905

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2008-03-08  Runa Bhattacharjee <runab@fedoraproject.org>
 
 	* bn_IN.po: Corrected errors related to plural forms
