Fix plural errors
svn path=/trunk/; revision=13906

--- a/po/hi.po
+++ b/po/hi.po
@@ -2669,8 +2669,8 @@ msgstr "क्या आप सुनिश्चित हैं कि आप 
 #, c-format
 msgid "This will open %d separate window."
 msgid_plural "This will open %d separate windows."
-msgstr[0] "एक ब्राउज़र विंडो खोलें."
-msgstr[1] "एक ब्राउज़र विंडो खोलें."
+msgstr[0] "एक अलग ब्राउज़र विंडो खोलेगा."
+msgstr[1] "%d अलग ब्राउज़र विंडो खुलेंगे."
 
 #: ../src/file-manager/fm-directory-view.c:991
 #, c-format
@@ -2760,7 +2760,7 @@ msgstr "कुल \"%s\" में से चयनित (%s)"
 msgid "%d item selected (%s)"
 msgid_plural "%d items selected (%s)"
 msgstr[0] "%d मद चयनित (%s)"
-msgstr[1] ""
+msgstr[1] "%d मद चयनित (%s)"
 
 #  translators: this is preceded with a string of form 'N folders' (N more than 1)
 #. Folders selected also, use "other" terminology
