--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+	* hi.po: Fix plural errors.
+
 2008-03-08  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
