--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-8  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Djihed Afifi.
+
 2008-03-08  Guntupalli Karunakar  <karunakar@indlinux.org>
 
 	* hi.po: Fix plural errors.
