--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2008-03-8  Djihed Afifi <djihed@gmail.com> 
+2008-03-08  Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Updated Turkish translation.
+
+2008-03-08  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
 
