Updated polish translation
2008-03-08  Wadim Dziedzic  <wadimd@svn.gnome.org>

	* pl.po: Updated polish translation

svn path=/trunk/; revision=13909

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-06 23:29+0100\n"
-"PO-Revision-Date: 2008-03-06 01:11+0300\n"
+"POT-Creation-Date: 2008-03-08 22:45+0100\n"
+"PO-Revision-Date: 2008-03-07 14:04+0100\n"
 "Last-Translator: Tomasz Dominikowski <dominikowski@gmail.com>\n"
 "Language-Team: Tomasz Dominikowski (Aviary.pl) <dominikowski@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -561,19 +561,19 @@ msgstr ""
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:38
 msgid ""
 "If set to true, newly opened windows will have the location bar visible."
-msgstr "Określa, czy nowootwarte okna będą miały widoczny pasek położenia."
+msgstr "Określa, czy nowo otwarte okna będą miały widoczny pasek położenia."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:39
 msgid "If set to true, newly opened windows will have the side pane visible."
-msgstr "Określa, czy nowootwarte okna będą miały widoczny pasek boczny."
+msgstr "Określa, czy nowo otwarte okna będą miały widoczny pasek boczny."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:40
 msgid "If set to true, newly opened windows will have the status bar visible."
-msgstr "Określa, czy nowootwarte okna będą miały widoczny pasek stanu."
+msgstr "Określa, czy nowo otwarte okna będą miały widoczny pasek stanu."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:41
 msgid "If set to true, newly opened windows will have toolbars visible."
-msgstr "Określa, czy nowootwarte okna będą miały widoczny pasek narzędziowy."
+msgstr "Określa, czy nowo otwarte okna będą miały widoczny pasek narzędziowy."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
 msgid ""
@@ -638,7 +638,7 @@ msgid ""
 "file immediately and in-place, instead of moving it to the trash. This "
 "feature can be dangerous, so use caution."
 msgstr ""
-"Określa, czy nautilus będzie miał możliwość natychmiastowego usunięcia "
+"Określa, czy Nautilus będzie miał możliwość natychmiastowego usunięcia "
 "pliku, zamiast przeniesienia do kosza. Funkcja ta może być niebezpieczna, "
 "należy jej używać z rozwagą."
 
@@ -1495,7 +1495,7 @@ msgstr "_Pomiń"
 
 #: ../libnautilus-private/nautilus-file-operations.c:172
 msgid "S_kip All"
-msgstr "_Pomiń wszystkie"
+msgstr "Po_miń wszystkie"
 
 #: ../libnautilus-private/nautilus-file-operations.c:173
 msgid "_Retry"
@@ -1511,15 +1511,15 @@ msgstr "Za_stąp"
 
 #: ../libnautilus-private/nautilus-file-operations.c:176
 msgid "Replace _All"
-msgstr "Zastąp _wszystkie"
+msgstr "Zastąp wszys_tkie"
 
 #: ../libnautilus-private/nautilus-file-operations.c:177
 msgid "_Merge"
-msgstr "_Połącz"
+msgstr "Połąc_z"
 
 #: ../libnautilus-private/nautilus-file-operations.c:178
 msgid "Merge _All"
-msgstr "Połącz _wszystko"
+msgstr "Połącz wsz_ystko"
 
 #: ../libnautilus-private/nautilus-file-operations.c:203
 #, c-format
@@ -2210,24 +2210,24 @@ msgid "Setting permissions"
 msgstr "Ustawianie uprawnień"
 
 #. localizers: the initial name of a new folder
-#: ../libnautilus-private/nautilus-file-operations.c:4719
+#: ../libnautilus-private/nautilus-file-operations.c:4720
 msgid "untitled folder"
 msgstr "folder bez nazwy"
 
 #. localizers: the initial name of a new empty file
-#: ../libnautilus-private/nautilus-file-operations.c:4727
+#: ../libnautilus-private/nautilus-file-operations.c:4728
 msgid "new file"
 msgstr "nowy plik"
 
-#: ../libnautilus-private/nautilus-file-operations.c:4817
+#: ../libnautilus-private/nautilus-file-operations.c:4818
 msgid "Error while creating directory %B."
 msgstr "Błąd podczas tworzenia folderu %B."
 
-#: ../libnautilus-private/nautilus-file-operations.c:4819
+#: ../libnautilus-private/nautilus-file-operations.c:4820
 msgid "Error while creating file %B."
 msgstr "Błąd podczas tworzenia pliku %B."
 
-#: ../libnautilus-private/nautilus-file-operations.c:4821
+#: ../libnautilus-private/nautilus-file-operations.c:4822
 #, c-format
 msgid "There was an error creating the directory in %F."
 msgstr "Wystąpił błąd podczas tworzenia folderu w %F."
@@ -2708,7 +2708,7 @@ msgstr "Dowiązanie \"%s\" jest uszkodzone."
 #: ../libnautilus-private/nautilus-mime-actions.c:595
 #, c-format
 msgid "The Link \"%s\" is Broken. Move it to Trash?"
-msgstr "Dowiązanie \"%s\" jest uszkodzone. Czy przenieść je do kosza?"
+msgstr "Dowiązanie \"%s\" jest uszkodzone. Przenieść je do kosza?"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:601
 msgid "This link can't be used, because it has no target."
