--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-08  Wadim Dziedzic  <wadimd@svn.gnome.org>
+
+	* pl.po: Updated polish translation
+
 2008-03-08  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish translation.
