--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09  Kenneth Nielsen  <k.nielsen81@gmail.com>
+
+	* da.po: Updated Danish translation
+
 2008-03-08 Maxim Dziumanenko <dziumanenko@gmail.com>
 
         * uk.po: Update Ukrainian translation.
