--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09  I. Felix <ifelix@svn.gnome.org>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2008-03-09  Kenneth Nielsen  <k.nielsen81@gmail.com>
 
 	* da.po: Updated Danish translation
