--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek translation
+
 2008-03-09  I. Felix <ifelix@svn.gnome.org>
 
 	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
