--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09  Artur Flinta  <aflinta@gmail.com>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2008-03-09  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
