--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09  Vasiliy Faronov <qvvx@yandex.ru>
+
+	* ru.po: Updated Russian translation.
+
 2008-03-09  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
