--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-10  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-03-09  Vasiliy Faronov <qvvx@yandex.ru>
 
 	* ru.po: Updated Russian translation.
