Fixed (maybe) duplicate shortcuts.
2008-03-10  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Fixed (maybe) duplicate shortcuts.

svn path=/trunk/; revision=13919

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-10  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Fixed (maybe) duplicate shortcuts.
+
 2008-03-10  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
