Update for release.
2008-03-11  Alexander Larsson  <alexl@redhat.com>

        * AUTHORS:
        * NEWS:
        * THANKS:
        * check-THANKS.pl:
	Update for release.


svn path=/trunk/; revision=13920

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,16 @@
+Nautilus 2.22 version by:
+Martin Wehner  <martin.wehner@gmail.com>
+Alex Larsson <alexl@redhat.com
+Christian Neumair  <cneumair@gnome.org>
+Cosimo Cecchi <cosimoc@gnome.org>
+David Zeuthen  <davidz@redhat.com>
+
 Nautilus 2.4 version by:
 
 Alex Larsson <alexl@redhat.com>
 Dave Camp <dave@ximian.com>
 Soren Sandmann <sandmann@daimi.au.dk>
-Jürg Billeter <j@bitron.ch>
+JÃ¼rg Billeter <j@bitron.ch>
 
 Nautilus 2.2 version by:
 
