--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-03-11  Alexander Larsson  <alexl@redhat.com>
+
+        * AUTHORS:
+        * NEWS:
+        * THANKS:
+        * check-THANKS.pl:
+	Update for release.
+
 2008-03-07  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c:
