--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Major changes in 2.22.0 are:
+* Fix typo in strings
+* Fix crashes
+* Use a better icon for the progress dialog
+* Have a mount menu for mountable files, not an unmount one
+* Handle broken bookmark files bette
+* Sniff x-content type asynchronously
+* Don't look for autorun stuff on non-local files
+* Allow setting permissions on remote shares
+* Fix "delete all" button in delete dialog
+* Show custom icons at right size
+* Fix some performance issues on nonlocal mounts
+
 Major changes in 2.21.92 are:
 * Build fixes
 * Fix crashes and leaks
