--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2008-03-11  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump to 2.22.0
+
         * AUTHORS:
         * NEWS:
         * THANKS:
