Post release version bump
2008-03-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.22.0 ===


svn path=/trunk/; revision=13923

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2008-03-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump
+
+=== nautilus 2.22.0 ===
+
+2008-03-11  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Bump to 2.22.0
 
         * AUTHORS:
