--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-10  Ani Peter  <peter.ani@gmail.com
+
+	* ml.po: Updated Malayalam Translation
+
 === nautilus 2.22.0 ===
 
 2008-03-10  Luca Ferretti  <elle.uca@libero.it>
