Translation updated by Ivar Smolin
2008-03-11  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=13926

--- a/po/et.po
+++ b/po/et.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-29 20:58+0000\n"
-"PO-Revision-Date: 2008-03-09 20:17+0200\n"
+"PO-Revision-Date: 2008-03-10 21:57+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -631,6 +631,10 @@ msgid ""
 "detected; for media where a known x-content type is detected, the user "
 "configurable action will be taken instead."
 msgstr ""
+"Kui märgitud, siis avab Nautilus meedia automaatsel ühendamisel kataloogi. "
+"See rakendub ainult meediale, mille kohta pole x-content/* tüüpi tuvastatud. "
+"Tuvastatud x-content tüübiga meedia korral rakendatakse aga kasutaja poolt "
+"määratud tegevus."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:48
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
@@ -2808,7 +2812,7 @@ msgstr "Ühtegi rakendust pole valitud"
 #: ../libnautilus-private/nautilus-open-with-dialog.c:920
 #, c-format
 msgid "%s document"
-msgstr ""
+msgstr "%s dokument"
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:615
 #: ../libnautilus-private/nautilus-open-with-dialog.c:926
@@ -4766,6 +4770,10 @@ msgid ""
 "\n"
 "If in doubt, press Cancel."
 msgstr ""
+"Tarkvara käivitatakse otse meedialt \"%s\". Sa ei tohiks mitte kunagi "
+"käivitada tarkvara, mida Sa ei usalda.\n"
+"\n"
+"Kui kahtled, siis vajuta \"Loobu\"."
 
 #: ../src/nautilus-bookmarks-window.c:156
 #: ../src/nautilus-file-management-properties.c:203
