--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-11  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-03-10  Ani Peter  <peter.ani@gmail.com
 
 	* ml.po: Updated Malayalam Translation
