--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-12  Tomas Bzatek  <tbzatek@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
+	Fix a crash while changing owner
+
 2008-03-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
