Fixed French translation.
2008-03-12  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Fixed French translation.

svn path=/trunk/; revision=13929

--- a/po/fr.po
+++ b/po/fr.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.21.91\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-27 20:17+0100\n"
-"PO-Revision-Date: 2008-02-27 20:17+0100\n"
+"PO-Revision-Date: 2008-03-12 18:11+0100\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -6291,10 +6291,11 @@ msgstr "L'emplacement n'est pas un dossier."
 msgid "Couldn't find \"%s\"."
 msgstr "Impossible de trouver « %s »."
 
+# http://bugzilla.gnome.org/show_bug.cgi?id=522029
 #: ../src/nautilus-window-manage-views.c:1695
 #, c-format
 msgid "Nautilus cannot handle %s: locations."
-msgstr "Nautilus ne reconnaît pas les emplacements %s."
+msgstr "Nautilus ne reconnaît pas les emplacements « %s: »."
 
 #: ../src/nautilus-window-manage-views.c:1698
 msgid "Nautilus cannot handle this kind of locations."
