--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-12  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-property-browser.c:
+	(make_properties_from_directories):
+	Use the correct string to lookup the icons for the emblems.
+	(#505111).
+
 2008-03-12  Tomas Bzatek  <tbzatek@redhat.com>
 
 	* src/file-manager/fm-properties-window.c:
