Don't create application/x-ext-<extension> types for known mimetypes
2008-03-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-application-chooser.c:
        (set_extension_and_description):
	Don't create application/x-ext-<extension> types for known mimetypes



svn path=/trunk/; revision=13931

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-13  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-mime-application-chooser.c:
+        (set_extension_and_description):
+	Don't create application/x-ext-<extension> types for known mimetypes
+
 2008-03-12  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-property-browser.c:
