respect gtk-button-images property for buttons (#514130) Patch from Marcin
2008-03-14  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-column-chooser.c:
        (button_new_with_mnemonic):
	respect gtk-button-images property for buttons (#514130)
	Patch from Marcin Galazka



svn path=/trunk/; revision=13932

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-14  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-column-chooser.c:
+        (button_new_with_mnemonic):
+	respect gtk-button-images property for buttons (#514130)
+	Patch from Marcin Galazka
+
 2008-03-13  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-application-chooser.c:
