Added missing mnemonic to German version.
2008-03-14  Andre Klapper  <a9016009@gmx.de>

	* de.po: Added missing mnemonic to German version.


svn path=/trunk/; revision=13933

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-14  Andre Klapper  <a9016009@gmx.de>
+
+	* de.po: Added missing mnemonic to German version.
+
 2008-03-12  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Fixed French translation.
